kubernetes/charts/traefik/manifests/middleware-geoblock.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/traefik.io/middleware-v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: geoblock
  namespace: traefik-system
spec:
  plugin:
    cfgeoblock:
      mode: include
      countries:
        - VN
      allowEmpty: false
