kubernetes/charts/traefik/manifests/gateway-external.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/core/service-v1.json

apiVersion: v1
kind: Service
metadata:
  name: traefik-external
  namespace: traefik-system
  annotations:
    lbipam.cilium.io/ips: 10.242.20.189
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      port: 80
      targetPort: 9080
    - name: https
      port: 443
      targetPort: 9443

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/gateway.networking.k8s.io/gateway-v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-external
  namespace: traefik-system
  annotations:
    argocd.argoproj.io/sync-wave: "100"
    external-dns.alpha.kubernetes.io/target: lab-gateway.bichls.dev
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 9080
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 9443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: bichls.dev
