kubernetes/charts/traefik/manifests/gateway-internal.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/core/service-v1.json

apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: traefik-system
  annotations:
    lbipam.cilium.io/ips: 10.242.20.170
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: https
      port: 443
      targetPort: 8443
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/gateway.networking.k8s.io/gateway-v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-internal
  namespace: traefik-system
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  gatewayClassName: traefik-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: bichls.dev
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/gateway.networking.k8s.io/gatewayclass-v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-internal
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  controllerName: traefik.io/gateway-controller
  parametersRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-internal
    namespace: traefik-system
