kubernetes/charts/traefik/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/moonlight8978/lbh-lab/refs/heads/jsonschema/gateway.networking.k8s.io/httproute-v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: &ns traefik-system
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  parentRefs:
    - name: traefik-external
      namespace: *ns
      sectionName: web
    - name: traefik
      namespace: *ns
      sectionName: web
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 301
            scheme: https
